syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb/";

message CalculatorRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message CalculatorResponse {
  int64 sum_result = 1;
}

message PrimeNumberRequest{
  int64 number = 1;
}

message PrimeNumberResponse{
  int64 result = 1;
}

message AverageRequest{
  int64 number = 1;
}

message AverageResponse{
  double average = 1;
}

message MaximumRequest{
  int64 number = 1;
}

message MaximumResponse{
  int64 max = 1;
}

service CalculatorService{

  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

  rpc PrimeDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

  rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {};

  rpc FindMaximum(stream MaximumRequest) returns (stream MaximumResponse) {};
}